@@ -1,3 +1,8 @@
+2012-11-16  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * EcControl.m: Record a change in the alerter configuration as an
+        update of the overall configuration.
+
 2012-10-28  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* EcCommand.m:
